--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,58 +1,57 @@
+# name: Generate bindings for r2libr 🚀
 
-name: Generate bindings for r2libr 🚀
+# on:
+#   push:
+#   pull_request:
 
-on:
-  push:
-  pull_request:
-
-jobs:
-  vala:
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Install r2
-      run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
-    - name: Install vala
-      run: sudo apt install -y valac
-    - name: Build and run some tests
-      run: |
-        ./configure --prefix=/usr
-        sudo make -C vapi install
-        make -C vapi/t
-  swig-python:
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Install r2
-      run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
-    - name: Install valabind and swig
-      run: |
-        sudo apt install -y swig valac
-        r2pm -ci valabind
-    - name: Configure
-      run: ./configure
-    - name: Test valabind
-      run: r2pm -r valabind --version
-    - name: Build swig bindings
-      run: r2pm -r make -C python
-    - name: Build dlang bindings
-      run: r2pm -r make -C dlang
-  rust:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Install r2
-        run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
-      - name: Build
-        run: cargo build
-        working-directory: rust/r2api
-      - name: Test (dynamic)
-        run: cargo run
-        working-directory: rust/r2api
-      # Uncomment when radare2 pkg-config is no longer broken
-      #- name: Test (static)
-      #  run: cargo run --features=static
-      #  working-directory: rust/r2api
+# jobs:
+#   vala:
+#     runs-on: ubuntu-20.04
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v2
+#     - name: Install r2
+#       run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
+#     - name: Install vala
+#       run: sudo apt install -y valac
+#     - name: Build and run some tests
+#       run: |
+#         ./configure --prefix=/usr
+#         sudo make -C vapi install
+#         make -C vapi/t
+#   swig-python:
+#     runs-on: ubuntu-20.04
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v2
+#     - name: Install r2
+#       run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
+#     - name: Install valabind and swig
+#       run: |
+#         sudo apt install -y swig valac
+#         r2pm -ci valabind
+#     - name: Configure
+#       run: ./configure
+#     - name: Test valabind
+#       run: r2pm -r valabind --version
+#     - name: Build swig bindings
+#       run: r2pm -r make -C python
+#     - name: Build dlang bindings
+#       run: r2pm -r make -C dlang
+#   rust:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: dtolnay/rust-toolchain@stable
+#       - name: Install r2
+#         run: git clone https://github.com/radareorg/radare2 && CFLAGS=-O0 radare2/sys/install.sh /usr
+#       - name: Build
+#         run: cargo build
+#         working-directory: rust/r2api
+#       - name: Test (dynamic)
+#         run: cargo run
+#         working-directory: rust/r2api
+#       # Uncomment when radare2 pkg-config is no longer broken
+#       #- name: Test (static)
+#       #  run: cargo run --features=static
+#       #  working-directory: rust/r2api
